# Bespoke-Synth-MCP

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CODEX_PROMPT.txt  README.md  blubber_beats.py  check_audio.py  chibi_hardstyle.py  docker-compose.yml  make_brainworm.py  plan.md  render_404.py  render_beat.py  render_chibi_sunshine.py  render_eclipse.py  render_song.py  render_starfall.py  render_sunrise.py  render_void.py  smoketest.py  smoketest_audio.py  smoketest_brainworm.py  synth_engine.py  tunnel_fever.py  workflow_composer.py
.github/workflows/: ci.yml  nightly-smoke.yml
docs/: README.md  api.md  architecture.md  cli_clients.md  docker.md  ops_runbook.md  release_checklist.md  security.md  setup.md  testing.md  troubleshooting.md  windows_docker_mcp.md  workflows.md
examples/: bespoke_script_agent.py
examples/client-configs/: claude-code.mcp.json  cursor-http.json  vscode-stdio.json
infra/docker/: mcp_bespoke_server.Dockerfile  orchestrator.Dockerfile
orchestrator/: README.md  pyproject.toml
orchestrator/src/orchestrator/: __init__.py  api.py  config.py  mcp_client.py  model_router.py  planner.py  policies.py  telemetry.py
orchestrator/tests/: test_orchestrator_e2e_mock.py  test_policy_modes.py  test_router_fallbacks.py
scripts/: build_windows_docker_mcp.ps1  run_docker_stdio.ps1  smoke_http.py  smoke_stack.py  start_local.ps1  test_all.ps1
services/mcp_bespoke_server/: README.md  append_audio.py  insert_handlers.py  pyproject.toml
services/mcp_bespoke_server/src/mcp_bespoke_server/: __init__.py  audio.py  compose.py  config.py  idempotency.py  osc_bridge.py  schemas.py  server.py  theory.py
services/mcp_bespoke_server/tests/: conftest.py  test_idempotency.py  test_mcp_http_smoke.py  test_mcp_stdio_smoke.py  test_osc_bridge_unit.py  test_schemas.py  test_smoke_new_tools.py
workflow_presets/: breakcore_brainworm.json  test_plan.json
