[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-bespoke-server"
version = "0.1.0"
description = "FastMCP server for BespokeSynth over OSC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.26.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-osc>=1.9.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "mido>=1.3.0",
  "soundfile>=0.12.1",
]

[project.optional-dependencies]
audio = [
  "pyloudnorm>=0.1.1",
  "scipy>=1.13.0",
  "numpy>=1.26.0",
  "pydub>=0.25.0",
]
stems = [
  "demucs>=4.0.0",
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
